--- a/indext.html
+++ b/indext.html
@@ -50,7 +50,7 @@
     
     <div class="container">
         <div class="para1">
-            Information of this page
+            <h3>Information of this page</h3>
         </div>
     </div>
 </body>
