--- a/indext.html
+++ b/indext.html
@@ -8,26 +8,20 @@
       * {
         margin: 0;
         padding: 0;
-        /* background-image: C:\Users\ROHIT\Desktop\Project\Nature2.jpg; */
       }
       .sites {
         font-size: 16;
         background-color: rgb(104, 255, 104);
-        margin: 3 15 90;
-        /* text-decoration: solid; */
-        /* align-items: center; */
-        /* position: sticky; */
+        margin: 3 15 85;
       }
       .para1 {
         font-family: "Segoe UI";
         font-weight: bold;
-        /* align-items: center; */
-        /* align-items: flex-end; */
       }
       .navbar {
         position: absolute;
         top: 9;
-        left: 70%;
+        left: 68%;
         right: 0;
       }
       .para {
@@ -47,20 +41,23 @@
           /* left: 30; */
           left: -460;
           /* right: 20; */
+          border:1px solid black;
       }
       .btn1{
         color: black;
         background-color: transparent;
         text-decoration: underline;
+        border-color:2px solid red;
       }
       .btn1:hover{
         background-color:transparent;
         color:green;
+        border-color:2px solid red;
       }
       .foot{
         background: transparent;
         padding: 3px;
-        background-color:rgb(193, 100, 255);
+        background-color:rgb(255, 68, 183);
         color: aliceblue;
       }
     </style>
@@ -76,9 +73,9 @@
 
       <div class="navbar">
         <a href="index.html" class="sites">Home</a>
-        <!-- <a href="#" class="sites">Donation</a> -->
         <a href="contact.html" class="sites">Contact us</a>
-        <a href="about.html" class="sites">About us</a><br>
+        <a href="about.html" class="sites">About us</a>
+        <a href="member.html" class="sites">Become a member</a><br>
         <div class="info">
           <pre>
             <div class="para">
@@ -90,49 +87,17 @@
           </pre>
         </div>
         <div class="centerButton">
-            <!-- <type="button" class="donate btn" onclick=""> -->
               <a href="donation.html" class="btn btn-primary" type="button">
                <h2 class="btn1"> Click here to donate some money for planting Trees<br></h2>
               </a>
-            
-            <!-- </type> -->
-        </div>
+          </div>
       </div>
     </div>
-    <!-- <pre>
-        jgoihd
-        fdfdsf
-        fdsdsftdsfds
-        fds
-        fdsftdsfdsdsftfdsf
-        dsafdasfdsdfsf
-        dfsftff
-        ffffffg
-        height
-        hgdfsggs
-
-        fdgret
-        rgreggfdg
-
-        gfdg
-        fgsftthgtryr
-        hfghjgkuy
-        jdhhtsyggh
-
-        htfhtr
-        jhutu
-        yythongfdu
-        dytud
-        hgf
-    </pre> -->
-
-    <!-- <div class="container">
-        <div class="para1">
-            Information of this page
-        </div>
-    </div> -->
+    <div class="contact">
+      <img src="Contact us.png" alt="Contact us image" height="20%" width="100%">
+    </div>
     <footer class="foot">
-      copyright information goes to @rohit koli
+      copyright information goes to <a href="https://github.com/Rohit-Koli">@rohit koli</a>
     </footer>
   </body>
 </html>
