--- a/indext.html
+++ b/indext.html
@@ -35,23 +35,25 @@
         margin: 120 0 0 -200;
       }
       .centerButton{
-          /* align-items: center; */
           position: absolute;
           top: 450;
-          /* left: 30; */
           left: -460;
-          /* right: 20; */
           border:1px solid black;
+          border-radius: 20px;
       }
       .btn1{
-        color: black;
+        border:none;
+        color:white;
+        padding:6px 32px;
+       display:inline-block;
+       border-radius: 10px;
         background-color: transparent;
         text-decoration: underline;
         border-color:2px solid red;
       }
       .btn1:hover{
-        background-color:transparent;
-        color:green;
+        background:linear-gradient(to bottom, #ff66cc 0%, #0066cc 100%);
+        color:black;
         border-color:2px solid red;
       }
       .foot{
@@ -88,7 +90,7 @@
         </div>
         <div class="centerButton">
               <a href="donation.html" class="btn btn-primary" type="button">
-               <h2 class="btn1"> Click here to donate some money for planting Trees<br></h2>
+               <h2 class="btn1">more info<br></h2>
               </a>
           </div>
       </div>
