--- a/indext.html
+++ b/indext.html
@@ -26,41 +26,26 @@
       }
       .para {
         position: absolute;
-        align-items: 0 79;
-        font-size: 14;
+        align-items: 0 79;        
         font-weight: bold;
-        font-style: italic;
-        background-color:rgb(97, 255, 195);
-        text-align: center;
-        margin: 120 0 0 -200;
-      }
-      .centerButton{
-          position: absolute;
-          top: 450;
-          left: -460;
-          border:1px solid black;
-          border-radius: 20px;
-      }
-      .btn1{
-        border:none;
-        color:white;
-        padding:6px 32px;
-       display:inline-block;
-       border-radius: 10px;
-        background-color: transparent;
-        text-decoration: underline;
-        border-color:2px solid red;
-      }
-      .btn1:hover{
-        background:linear-gradient(to bottom, #ff66cc 0%, #0066cc 100%);
-        color:black;
-        border-color:2px solid red;
+        /* background-color:rgb(97, 255, 195); */
+        font-family: cursive;
+        color: white;top: 120;
       }
       .foot{
         background: transparent;
         padding: 3px;
         background-color:rgb(255, 68, 183);
         color: aliceblue;
+      }
+      .para2
+      {
+        font-weight: bold;
+        /* background-color: aqua; */
+        position: absolute;
+        top: 280;
+        font-family: cursive;
+        color: white;
       }
     </style>
   </head>
@@ -75,24 +60,23 @@
 
       <div class="navbar">
         <a href="index.html" class="sites">Home</a>
-        <a href="contact.html" class="sites">Contact us</a>
         <a href="about.html" class="sites">About us</a>
         <a href="member.html" class="sites">Become a member</a><br>
         <div class="info">
-          <pre>
             <div class="para">
-                <h3>How can we save Nature</h3>
-                here is the information will arrive lusen how was nhre it
-                the your feeling goes down through the nature and
-                and then how you will modify it
-            </div>
-          </pre>
+    <h4>What is conservation of Nature</h4>
+          <br>
+          <p>
+          Conservation of nature means the preservation of forests, land, water bodies, and minerals, fuels,
+          natural gases, etc. And to make sure that all these continue to be available in abundance. Thus all
+          these natural resources make life worth living on Earth. Life would not be imaginable without air, 
+          water, sunlight as well as other natural resources present on the earth.
+          <a href="info.html">More</a> 
+        </p>
+           </div>          
         </div>
-        <div class="centerButton">
-              <a href="donation.html" class="btn btn-primary" type="button">
-               <h2 class="btn1">more info<br></h2>
-              </a>
-          </div>
+          
+          
       </div>
     </div>
     <div class="contact">
